tests/array/t11684.nim
discard """
  errormsg: "cannot infer the type of array"
  line: 5
"""
for a in []:
  discard